# ROBUST-BEM

./: CMakeLists.txt
examples/: CMakeLists.txt  chebyshev_nodes_calculator.cpp  distance_plotting.cpp  gen_weight_test.cpp  model_problem_2.cpp  model_problem_2_soln.cpp  model_problem_2_soln_2.cpp  model_problem_3.cpp  model_problem_3_soln.cpp  test.py
include/: integrate_from.hpp  line_near_singularity.hpp  parabolic_parametrization.hpp  point_near_singularity.hpp  shifted_logweight_quadrature.hpp
src/: CMakeLists.txt  line_near_singularity.cpp  parabolic_parametrization.cpp  point_near_singularity.cpp  shifted_logweight_quadrature.cpp
